LIST OF CHANGES
---------------

release 50.2
 - names of the pipeline daemon modules and scripts harmonised
 - the daemon module does not inherit from the pipeline base class thus
   reducing the number of command line script options
 - common code moved from the daemon scripts to the daemon module
 - a new role for common accessors

release 50.1
 - bug fix to allow archival daemon to work (restore availabilty of run folder
   finding method)

release 50.0
 - purge carriage returns (as well line feeds) from study descriptions for RG header
   records (xml lims driver has previously done this as part of XML parsing)
 - require minimum version 5.10 for perl
 - add study analysis configuration accessor
 - simpler name for the archival daemon module
 - parent class for pipeline daemons
 - dry_run option for daemons
 - consistent behaviour of the archival and analysis daemons
   when LIMs data are not available in the ml warehouse and
   the run is not a QC run, the run is skipped
 - the pipeline daemons define the type of the pipeline to run
   (default, gclp, qc) and set appropriate backward-compatible
   options for the pipeline script
 - Log::Log4perl logger is used in pipeline daemons
 - cached samplesheet generation - use ml warehouse for all
   runs except QC runs, for which the old warehouse is still used
 - add npg_pipeline_job_env_to_threads script (to avoid excessive repeated perl one-
   liners in command arguments).
 - archival of logs should run after an asynchronous move to outgoing (peformed by the
   staging daemon) - paths adjusted and job preexec checking for the existence of the
   runfolder in outgoing is added

release 49.8
 - seq-alignment now uses bwa_aln_se for single read runs
 - disable log archival pending enhancements

release 49.7
 - seq-alignment - P4 and new bwa for older chemistries & forcing mem for alt references
 - bug fix after passing RG paramater to illumina2bam: change SplitBamByReadGroup options: